@@ -180,6 +180,11 @@
   (with-output-to-string (stream)
     (ccl:report-compiler-warning c stream :short t)))
 
+;; Needed because `ccl:report-compiler-warning' would return
+;; "Nonspecific warning".
+(defmethod compiler-warning-short-message ((c ccl::shadowed-typecase-clause))
+  (princ-to-string c))
+
 (defimplementation call-with-compilation-hooks (function)
   (handler-bind ((ccl:compiler-warning 'handle-compiler-warning))
     (let ((ccl:*merge-compiler-warnings* nil))
@@ -407,19 +412,21 @@
         (pc-source-location lfun pc)
         (function-source-location lfun)))))
 
+(defun function-name-package (name)
+  (etypecase name
+    (null nil)
+    (symbol (symbol-package name))
+    ((cons (eql setf) symbol) (symbol-package (cadr name)))
+    ((cons (eql :internal)) (function-name-package (car (last name))))
+    ((cons (and symbol (not keyword)) (cons list null))
+     (symbol-package (car name)))
+    (standard-method (function-name-package (ccl:method-name name)))))
+
 (defimplementation frame-package (frame-number)
   (with-frame (p context) frame-number
     (let* ((lfun (ccl:frame-function p context))
            (name (ccl:function-name lfun)))
-      (labels ((name-package (name)
-                 (etypecase name
-                   (null nil)
-                   (symbol (symbol-package name))
-                   ((cons (eql setf) symbol) (symbol-package (cadr name)))
-                   ((cons (eql :internal)) (name-package (car (last name))))
-                   ((cons (and symbol (not keyword)) (cons list null))
-                    (symbol-package (car name))))))
-        (name-package name)))))
+      (function-name-package name))))
 
 (defimplementation eval-in-frame (form index)
   (with-frame (p context) index
