@@ -1,5 +1,13 @@
 2013-01-07  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-ccl.lisp (compiler-warning-short-message): Add a method
+	for ccl::shadowed-typecase-clause.  Whithout that we only get
+	"Nonspecific warning".
+	(function-name-package): Factored out from frame-package.  Add
+	case for standard-method.
+
+2013-01-07  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-ecl.lisp (describe-symbol-for-emacs): Include bound
 	symbols even those without documentation.
 
